--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = private-smart-home-ansible
 	url = git@github.com:NickJLange/private-smart-home-ansible.git
 	branch = master
+[submodule "dns_admin"]
+	path = dns_admin
+	url = git@github.com:NickJLange/dns_admin.git
