--- a/.gitmodules
+++ b/.gitmodules
@@ -6,5 +6,5 @@
 	url = git@github.com:NickJLange/private-smart-home-ansible.git
 	branch = master
 [submodule "dns_admin"]
-	path = dns_admin
+	path = network_kill_switch
 	url = git@github.com:NickJLange/dns_admin.git
