refactor: externalize config, fix PR #10 feedback
- Extract DOMAIN_SUFFIX to .env (fixes hardcoded nicklange.family)
- Fix --force flag logic in upload-to-vault.sh and update_endpoints.sh
- Fix ubiquiti filename typo (ubiquti -> ubiquiti)
- Remove unused types array from lego.sh
- Fix misleading comments about vault_cert_algo
- Reconcile .gitmodules submodule name/path mismatch
- Add comprehensive test suite (test-env-loading.sh)
- Move update_internal_dns.sh to scripts/ directory

All fixes validated with automated unit tests.

--- a/.gitmodules
+++ b/.gitmodules
@@ -5,6 +5,6 @@
 	path = private-smart-home-ansible
 	url = git@github.com:NickJLange/private-smart-home-ansible.git
 	branch = master
-[submodule "dns_admin"]
+[submodule "network_kill_switch"]
 	path = network_kill_switch
 	url = git@github.com:NickJLange/dns_admin.git
