fix: consolidate .PHONY declaration and fix all target
- Consolidate all .PHONY declarations into single line 1
- Change all target from depending on clean to full workflow:
  all: refresh-certs vault certs
- Removes redundant .PHONY clean line
- Running 'make all' now executes complete certificate cycle

--- a/internal_cert_management/Makefile
+++ b/internal_cert_management/Makefile
@@ -1,8 +1,8 @@
+.PHONY: all refresh-certs vault vault-force certs certs-force clean
 
-.PHONY: all refresh-certs vault vault-force certs certs-force
-all: clean
+all: refresh-certs vault certs
+	@echo "Certificate cycle complete"
 
-.PHONY: refresh-certs
 refresh-certs:
 	@echo "Running certificate refresh..."
 	scripts/lego.sh
@@ -23,6 +23,5 @@ certs-force:
 	@echo "Updating Endpoints (with --force flag)..."
 	scripts/update_endpoints.sh --force
 
-.PHONY: clean
 clean:
 	@echo "Cleaning up...Nothing!"
