fix: replace real domain with placeholder in .env.example
Change DOMAIN_SUFFIX from nicklange.family to yourdomain.com
to ensure example file uses non-sensitive, generic placeholder values

--- a/internal_cert_management/.env.example
+++ b/internal_cert_management/.env.example
@@ -1,5 +1,5 @@
 # Domain Configuration
-DOMAIN_SUFFIX=nicklange.family
+DOMAIN_SUFFIX=yourdomain.com
 
 # Lego Configuration
 ADMIN_EMAIL=your-email@example.com
